@@ -1,6 +1,6 @@
 url;file;result;test
 -;-;-;freeRouter v26.1.3-cur, done by sprscc13@mrn0b0dy.
--;-;-;2026-01-03 15:35:04, took 00:12:36, with 50 workers, on 4173 cases, 0 failed, 0 traces, 3 retries
+-;-;-;2026-01-03 16:44:57, took 00:12:34, with 50 workers, on 4174 cases, 0 failed, 0 traces, 1 retries
 -;-;-;./rtr.bin, null
 http://sources.freertr.org/cfg/basic01.tst;basic01.tst;success;dummy test
 http://sources.freertr.org/cfg/basic02.tst;basic02.tst;success;interface with slot
@@ -1154,6 +1154,7 @@ http://sources.freertr.org/cfg/intop0-fr03.tst;intop0-fr03.tst;success;interop0:
 http://sources.freertr.org/cfg/intop0-fr04.tst;intop0-fr04.tst;success;interop0: framerelay dce
 http://sources.freertr.org/cfg/intop0-fr05.tst;intop0-fr05.tst;success;interop0: framerelay ppp
 http://sources.freertr.org/cfg/intop0-fr06.tst;intop0-fr06.tst;success;interop0: framerelay ietf
+http://sources.freertr.org/cfg/intop0-fr07.tst;intop0-fr07.tst;success;interop0: framerelay gre
 http://sources.freertr.org/cfg/intop0-hdlc.tst;intop0-hdlc.tst;success;interop0: hdlc
 http://sources.freertr.org/cfg/intop0-lapb01.tst;intop0-lapb01.tst;success;interop0: lapb dte
 http://sources.freertr.org/cfg/intop0-lapb02.tst;intop0-lapb02.tst;success;interop0: lapb dce
