@@ -10,7 +10,7 @@
 </style>
 <title>tester</title></head><body>
 release: freeRouter v26.1.3-cur, done by sprscc13@mrn0b0dy.<br/>
-tested: 2026-01-03 15:35:04, took 00:12:36, with 50 workers, on 4173 cases, 0 failed, 0 traces, 3 retries<br/>
+tested: 2026-01-03 16:44:57, took 00:12:34, with 50 workers, on 4174 cases, 0 failed, 0 traces, 1 retries<br/>
 jvm: ./rtr.bin, other: null<br/>
 <br/>
 <table><thead><tr><td><b>file</b></td><td><b>result</b></td><td><b>test</b></td></tr></thead><tbody>
@@ -1166,6 +1166,7 @@ jvm: ./rtr.bin, other: null<br/>
 <tr><td><a href="http://sources.freertr.org/cfg/intop0-fr04.tst">intop0-fr04.tst</a></td><td>success</td><td>interop0: framerelay dce</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop0-fr05.tst">intop0-fr05.tst</a></td><td>success</td><td>interop0: framerelay ppp</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop0-fr06.tst">intop0-fr06.tst</a></td><td>success</td><td>interop0: framerelay ietf</td></tr>
+<tr><td><a href="http://sources.freertr.org/cfg/intop0-fr07.tst">intop0-fr07.tst</a></td><td>success</td><td>interop0: framerelay gre</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop0-hdlc.tst">intop0-hdlc.tst</a></td><td>success</td><td>interop0: hdlc</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop0-lapb01.tst">intop0-lapb01.tst</a></td><td>success</td><td>interop0: lapb dte</td></tr>
 <tr><td><a href="http://sources.freertr.org/cfg/intop0-lapb02.tst">intop0-lapb02.tst</a></td><td>success</td><td>interop0: lapb dce</td></tr>
