@@ -17828,3 +17828,5 @@ qc pass: atmsar mux encapsulation
 qc pass: atmsar nlpid encapsulation
 qc pass: interop0: atmdxi snap
 qc pass: interop0: atmdxi nlpid
+---------------------------------- 2026-01-03 16:32:22 26.1.3
+qc pass: interop0: framerelay gre
